fixed select z-index & booking date button

--- a/src/components/Scene/Scene.css
+++ b/src/components/Scene/Scene.css
@@ -4,5 +4,5 @@
     margin:auto;
     width: 100%;
     height: 100svh;
-    z-index: -1;
+    z-index: -5;
   }  
